--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <a href="index.html" class="active">About</a>
       <a href="publications.html">Publications</a>
       <a href="research.html">Research</a>
-      <a href="awards.html">Awards</a>
-      <a href="internships.html">Internships</a>
+      <a href="data.html">Data Analysis</a>
       <a href="Curriculum_Vitae.pdf">Download CV</a>
     </nav>
   </header>
@@ -25,6 +24,28 @@
       <p>Previously <strong>Completed BTech</strong> in <strong>Mathematics and Computing</strong> with a minor in <strong>Industrial Mathematics</strong> (2020-24) from Delhi Technological University (DTU), formerly Delhi College of Engineering (DCE), Delhi, IN.</p>
       <p>Qualified <strong>GATE 2024</strong> with <strong>All India Rank 58</strong> in Data Science and Artificial Intelligence (Code: DA).</p>
       <p><strong>Research Interests:</strong> Numerical Methods for ODE/PDE, Physics-Informed Neural Networks, Numerical Linear Algebra, and Wavelet-based Numerical Solutions.</p>
+    </section>
+    <section id="awards">
+      <h2>Research Awards</h2>
+      <ul>
+        <li><strong>2nd Position</strong> out of 25 teams in <em>SoLitRev - Literature Review, Evolute 2024</em>, SIAM & Dept. of Applied Mathematics, DTU.</li>
+        <li><strong>1st Position</strong> in Machine Learning Track in Poster Presentation, <em>Young Researcher's Conclave (YRC 2023)</em>, CSIR-CRRI.</li>
+      </ul>
+    </section>
+    <section id="internships">
+      <h2>Research Internships</h2>
+      <h3>Department of Applied Mathematics, DTU, Delhi, IN (May 2022 - June 2024)</h3>
+      <p><strong>Supervisor: Dr. Vivek K. Aggarwal, Associate Professor</strong></p>
+      <p>Worked on formulating and simulating a predator-prey-scavenger model with Holling's Type III functional response, estimating parameters using physics-informed deep neural network from American Forest Dataset, fine-tuning model parameters through BFGS algorithm, and testing stability with Jacobian analysis.</p>
+      <p>Adaptive equidistributed moving meshes using Entropy-based strategy implemented using Deep Neural Networks for Convection Dominated Problems.</p>
+      <p>Equidistributed moving Mesh Using Entropy-based Monitor function for Convection-Dominated Problems - Details will be updated soon.</p>
+      <h3>Department of Mathematics, IIT Delhi, Delhi, IN (June 2023 - July 2023)</h3>
+      <p><strong>Supervisor: Prof. Mani Mehra, Professor</strong></p>
+      <p>Worked on 1-dimensional Singularly Perturbed Convection Diffusion Problem for finding optimal adaptive mesh for Numerical solution of Boundary Layer Problems in fluid dynamics. Developed non-uniform mesh minimizing error and maintaining smoothness answering critical questions about mesh points and position of layer formation.</p>
+      <h3>Computational Analytics and Learning Intelligence Based Research Exploration (CALIBRE), DTU, Delhi, IN (Sept 2022 - Apr 2024)</h3>
+      <p><strong>Supervisor: Prof. Rahul Katarya, Professor</strong></p>
+      <p>Developed KANHA - Kinetically Adaptive Neurodevelopmental-disorder Highway Assistant. Real-time road safety technology for neurodevelopmental patients providing personalized route suggestion using facial expression and surrounding analysis.</p>
+      <p>Autism Spectrum Disorder Detection using Nature Inspired Algorithms from 3D Video Dataset. Compared nature-inspired algorithms for feature selection with high accuracy and feature reduction.</p>
     </section>
     <section id="contact">
       <h2>Contact Information</h2>
