--- a/research.html
+++ b/research.html
@@ -13,8 +13,7 @@
       <a href="index.html">About</a>
       <a href="publications.html">Publications</a>
       <a href="research.html" class="active">Research</a>
-      <a href="awards.html">Awards</a>
-      <a href="internships.html">Internships</a>
+      <a href="data.html">Data Analysis</a>
       <a href="Curriculum_Vitae.pdf">Download CV</a>
     </nav>
   </header>
